--- a/Kubernetes/flannel/overlay/cni/config/cni.conf
+++ b/Kubernetes/flannel/overlay/cni/config/cni.conf
@@ -3,34 +3,34 @@
     "name":  "vxlan0",
     "type":  "flannel",
     "delegate":  {
-                     "type":  "win-overlay",
-                     "dns":  {
-                                 "Nameservers":  [
-                                                     "11.0.0.10"
-                                                 ],
-                                 "Search":  [
-                                                "default.svc.cluster.local"
-                                            ]
-                             },
-                     "Policies":  [
-                                      {
-                                          "Name":  "EndpointPolicy",
-                                          "Value":  {
-                                                        "Type":  "OutBoundNAT",
-                                                        "ExceptionList":  [
-                                                                              "192.168.0.0/16",
-                                                                              "11.0.0.0/8"
-                                                                          ]
-                                                    }
-                                      },
-                                      {
-                                          "Name":  "EndpointPolicy",
-                                          "Value":  {
-                                                        "Type":  "ROUTE",
-                                                        "DestinationPrefix":  "11.0.0.0/8",
-                                                        "NeedEncap":  true
-                                                    }
-                                      }
-                                  ]
-                 }
+        "type":  "sdnoverlay",
+        "dns":  {
+            "Nameservers":  [
+                "11.0.0.10"
+            ],
+            "Search":  [
+                "default.svc.cluster.local"
+            ]
+        },
+        "Policies":  [
+            {
+                "Name":  "EndpointPolicy",
+                "Value":  {
+                    "Type":  "OutBoundNAT",
+                    "ExceptionList":  [
+                        "10.244.0.0/16",
+                        "10.96.0.0/12"
+                    ]
+                }
+            },
+            {
+                "Name":  "EndpointPolicy",
+                "Value":  {
+                    "Type":  "ROUTE",
+                    "DestinationPrefix":  "10.96.0.0/12",
+                    "NeedEncap":  true
+                }
+            }
+        ]
+    }
 }
